--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,18 @@
     <meta name="description"
         content="Blogi: Una demo o demostración de un blog en el que puedes para ver la calidad que consigues con nosotros al hacer para ti un sitio web. Y también puedes escribir en este blog para que nunca olvides tus recuerdos más importantes">
     <link rel="canonical" href="https://blogi-node.herokuapp.com">
+
+    <!-- Android -->
+    <meta name="theme-color" content="orange">
+
+    <!-- IOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+
+    <link rel="apple-touch-icon" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="android/android-launchericon-192-192.png">
 </head>
 
 <body>
