--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li class="enlace">
-                <a href="https://blogi-node.herokuapp.com/posts/arts.html">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">
                     Ver artículos
                 </a>
             </li>
@@ -176,9 +176,6 @@
 
             <label id="descLabel" for="descripcion">Descripción de la misma:</label>
             <p id="introCategorias">¿En que tema entra su discusión?</p>
-            <ul class="categoriasUl">
-
-            </ul>
             <div class="textareas">
                 <div class="btns">
                     <button style="color: white;" class="negrita btn">
@@ -275,6 +272,7 @@
                 <h4>Navega por el sitio</h4>
                 <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">Tutoriales</a>
                 <a href="https://blogi-node.herokuapp.com/blog/articulos/">Tu blog</a>
+                <a href="https://blogi-node.herokuapp.com/info.html">Info. sobre sitio</a>
                 <a href="https://blogi-node.herokuapp.com/foro/">Foro de la comunidad</a>
             </div>
             <div class="siguenos col-sm">
