--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="enlace">
-                <a href="https://blogi-node.herokuapp.com/posts/arts.html">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">
                     Ver artículos
                 </a>
             </li>
@@ -169,6 +169,7 @@
                 <h4>Navega por el sitio</h4>
                 <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">Tutoriales</a>
                 <a href="https://blogi-node.herokuapp.com/blog/articulos/">Tu blog</a>
+                <a href="https://blogi-node.herokuapp.com/info.html">Info. sobre sitio</a>
                 <a href="https://blogi-node.herokuapp.com/foro/">Foro de la comunidad</a>
             </div>
             <div class="siguenos col-sm">
