--- a/public/info.html
+++ b/public/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,37 +9,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./index.css">
-    <title>Busquedas de artículos en Blogi</title>
+    <link rel="stylesheet" href="./css/info.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>Info. sobre sitio</title>
 </head>
 
 <body>
 
-    <!-- Spinner -->
-    <div class="spinner">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-        <span class="sr-only">Loading...</span>
-    </div>
-
-    <!-- Navbar -->
+    <!-- NavBar -->
     <nav class="navBar">
         <div id="presentacion">
-            <img src="../img/logo.png" class="imgLogo" alt="Logo">
+            <img src="./img/logo.png" class="imgLogo" alt="Logo">
             <span class="marca">Blogi</span>
         </div>
         <ul id="enlaces">
             <li class="enlace">
-                <a href="../index.html">
+                <a href="https://blogi-node.herokuapp.com/">
                     Inicio
                 </a>
             </li>
-            <li class="enlace buscador">
-                <i style="margin-left: 10px; cursor: pointer;" class="btnBuscador fa fa-search"></i>
-                <input type="text" name="buscar" id="buscar" placeholder="Busca artículos">
+            <li class="enlace">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">
+                    Ver artículos
+                </a>
             </li>
             <li class="enlace">
-                <a href="../auth.html">
+                <a href="https://blogi-node.herokuapp.com/auth.html">
+                    <button>
+                        Crear mi blog
+                    </button>
+                </a>
+            </li>
+            <li class="enlace">
+                <a href="./auth.html">
                     <button>
                         Iniciar Sesión
                     </button>
@@ -53,12 +56,24 @@
     </nav>
     <div class="toggle"></div>
 
-    <h1 style="margin-top: 115px; text-align: center;">Resultados de la búsqueda</h1>
+    <div class="info">
+        <h1>Info. sobre el sitio</h1>
+        <br>
+        <strong>Estas son algunas de las características de este sitio:</strong>
+        <ul class="caracteristicas">
+            <li>Diseño Responsive o Multiplataforma</li>
+            <li>API RESTFUL</li>
+            <li>Botones para contacto a redes sociales</li>
+            <li>Foro</li>
+            <li>PWA (<b>P</b>rogressive <b>W</b>eb <b>A</b>pplication)</li>
+            <li>Notificaciones Push</li>
+            <li>Modo oscuro</li>
+            <li>Y más...</li>
+        </ul>
 
-    <ul class="articulos">
-
-    </ul>
-
+        <p>La verdad que es un sitio muy completo... :-)</p>
+        <p>Duración aproximáda de desarrollo: 2 meses y medio</p>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -92,24 +107,8 @@
         </div>
     </footer>
 
-    <!-- Botones flotantes -->
-    <i class="fa fa-ellipsis-h abrirIconos animate__animated animate__bounceInRight"></i>
-    <div class="btnsFlotantes animate__animated hidden">
-        <!-- Whats -->
-        <i class="fa fa-whatsapp"></i>
-        <!-- Atención al cliente -->
-        <i class="fa fa-comments"></i>
-    </div>
-    <!-- Chatbot -->
-    <div class="chatbot hidden animate__animated">
-        <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-        <df-messenger
-            chat-icon="https:&#x2F;&#x2F;res.cloudinary.com&#x2F;chugus&#x2F;image&#x2F;upload&#x2F;v1635113376&#x2F;logo_nzedyn.png"
-            chat-title="Blogi" agent-id="cee427dc-5ff2-496f-be92-9c86bb86f9fb" language-code="es">
-        </df-messenger>
-    </div>
+    <script src="./js/info.js"></script>
 
-    <script src="./index.js"></script>
 </body>
 
 </html>
