--- a/public/busquedas/index.html
+++ b/public/busquedas/index.html
@@ -59,6 +59,8 @@
 
     </ul>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4892946836803751"
+        crossorigin="anonymous"></script>
 
     <!-- Footer -->
     <footer class="footer">
