--- a/public/info.html
+++ b/public/info.html
@@ -75,6 +75,9 @@
         <p>Duración aproximáda de desarrollo: 2 meses y medio</p>
     </div>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4892946836803751"
+        crossorigin="anonymous"></script>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="row">
