--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -16,6 +16,18 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4892946836803751"
         crossorigin="anonymous"></script>
     <title>Foro de Blogi</title>
+    <link rel="manifest" href="./manifest.json">
+    <!-- Android -->
+    <meta name="theme-color" content="orange">
+
+    <!-- IOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+
+    <link rel="apple-touch-icon" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="android/android-launchericon-192-192.png">
 </head>
 
 <body>
@@ -134,7 +146,7 @@
         <div class="comments">
             <h2>Comentarios:</h2>
             <div class="escribirComentarioDiv">
-                <input type="text" id="deste" placeholder="Escribe tu comentario...">
+                <button class="btn btn-primary w-75" id="deste">Escribe tu comentario</button>
                 <div class="escribirComentario hidden">
                     <div class="btns">
                         <button style="color: white;" class="negritaComment btn">
