--- a/public/info.html
+++ b/public/info.html
@@ -13,6 +13,18 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Info. sobre sitio</title>
+    <link rel="manifest" href="./manifest.json">
+    <!-- Android -->
+    <meta name="theme-color" content="orange">
+
+    <!-- IOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+
+    <link rel="apple-touch-icon" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="android/android-launchericon-192-192.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="android/android-launchericon-192-192.png">
 </head>
 
 <body>
