--- a/public/busquedas/index.html
+++ b/public/busquedas/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./index.css">
     <title>Busquedas de artículos en Blogi</title>
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="../manifest.json">
     <!-- Android -->
     <meta name="theme-color" content="orange">
 
@@ -101,7 +101,7 @@
             <div class="elPapi col-sm">
                 <h4>Desarrollador</h4>
                 <p>Derek Pérez - Copyright 2021.</p>
-                <p>v 1.0.0</p>
+                <p>v 1.2.0</p>
             </div>
         </div>
     </footer>
