--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -16,7 +16,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4892946836803751"
         crossorigin="anonymous"></script>
     <title>Foro de Blogi</title>
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="../manifest.json">
     <!-- Android -->
     <meta name="theme-color" content="orange">
 
@@ -303,7 +303,7 @@
             <div class="elPapi col-sm">
                 <h4>Desarrollador</h4>
                 <p>Derek Pérez - Copyright 2021.</p>
-                <p>v 1.0.0</p>
+                <p>v 1.2.0</p>
             </div>
         </div>
     </footer>
