--- a/public/auth.html
+++ b/public/auth.html
@@ -1,107 +1,106 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Signin</title>
-
     <meta name="google-signin-client_id"
         content="329383596127-r1m33da585qmhh3kaqcg82ie2ooq9rku.apps.googleusercontent.com">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>Autenticación de Blogi</title>
     <link rel="stylesheet" href="./css/auth.css">
-
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="container">
+<body>
 
-    <h1>Inica sesión o regístrate</h1>
-
-    <div class="auth">
-        <div class="googleAuth">
-            <div class="g-signin2 googleButton" data-onsuccess="onSignIn"></div>
-            <button class="btn btn-outline-primary w-100" id="cerrarSesion">Cerrar sesión con Google</button>
-        </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-            <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
-                <path
-                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-            </symbol>
-            <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
-                <path
-                    d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
-            </symbol>
-            <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                <path
-                    d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-            </symbol>
-        </svg>
-
-        <div class="alert alert-primary alert-dismissible d-flex align-items-center" role="alert">
-            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
-                <use xlink:href="#info-fill" />
-            </svg>
-            <div style="text-align: center;">
-                Cuando inicia sesión o se registras, obtiene un token especial que dura 8 horas para que
-                navegue libremente por su blog.
-                <br>
-                Así que, después de pasar ese tiempo, se le pedirá que vuelva a iniciar sesión
-            </div>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-
-        <form class="form login hidden">
-            <div class="spinner hidden">
-                <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-                <span class="sr-only">Loading...</span>
-            </div>
-            <h3>Inicia sesión</h3>
-            <div class="alert alert-danger alert-dismissible fade show hidden" role="alert">
-                <strong>¡Oh no!</strong> <span class="msgError"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            <input type="email" name="correo" id="correo" class="form-control mb-2" placeholder="Correo">
-            <input type="text" name="password" id="password" class="form-control mb-2" placeholder="Contraseña">
-
-            <button class="btn btn-primary">Ingresar</button>
-            <p>Si eres nuevo <span class="toggle">regístrate aquí</span></p>
-        </form>
-
-        <form class="form register">
-            <div class="spinner hidden">
-                <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-                <span class="sr-only">Loading...</span>
-            </div>
-            <h3>Regístrate</h3>
-            <div class="alert alert-danger alert-dismissible fade show hidden" role="alert">
-                <strong>¡Oh no!</strong> <span class="msgError"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-
-            <input type="text" name="nombre" id="nombreRegister" class="form-control mb-2" placeholder="Nombre"
-                required>
-            <input type="email" name="correo" id="correoRegister" class="form-control mb-2" placeholder="Correo"
-                required>
-            <input type="text" name="password" id="passwordRegister" class="form-control mb-2" placeholder="Contraseña"
-                minlength="6" required>
-
-            <button id="btnRegister" class="btn btn-primary">Regístrate</button>
-            <p>Si ya tienes una cuenta solo <span class="toggle">inicia sesión aquí</span> </p>
-        </form>
+    <!-- Spinner -->
+    <div class="spinner hidden">
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+        <span class="sr-only">Loading...</span>
     </div>
 
+    <div class="container">
+        <div class="forms-container">
+            <div class="signin-signup">
+                <form class="sign-in-form">
+                    <h2 class="title">Iniciar sesión</h2>
+                    <div class="input-field">
+                        <i class="fa fa-envelope"></i>
+                        <input type="text" id="loginEmail" placeholder="Correo electrónico" />
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="loginPassword" placeholder="Contraseña" />
+                    </div>
+                    <input type="submit" value="Inicia sesión" class="btn solid login" />
+                    <p class="social-text">O inicia sesión con Google</p>
+                    <div class="social-media">
+                        <div class="googleAuth">
+                            <div class="g-signin2 googleButton w-100" data-onsuccess="onSignIn"></div>
+                            <button style="padding: 15px;" class="btn btn-outline-primary w-100"
+                                id="cerrarSesion">Cerrar sesión con
+                                Google</button>
+                        </div>
+                    </div>
+                </form>
+                <form class="sign-up-form">
+                    <h2 class="title">Regístrate</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" id="registerName" placeholder="Nombre de usuario" />
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-envelope"></i>
+                        <input type="email" id="registerEmail" placeholder="Correo electrónico" />
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="registerPassword" placeholder="Contraseña" />
+                    </div>
+                    <input type="submit" class="btn register" value="Regístrate" />
+                    <p class="social-text">O regístrate con Google</p>
+                    <div class="social-media">
+                        <div style="width: 75%;" class="googleAuth">
+                            <div class="g-signin2 googleButton w-100" data-onsuccess="onSignIn"></div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
 
+        <div class="panels-container">
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>¿Primera vez?</h3>
+                    <p>
+                        Ven y regístrate para que empieces a usar Blogi y conectes con otros blogueros
+                    </p>
+                    <button class="btn transparent" id="sign-up-btn">
+                        Regístrate
+                    </button>
+                </div>
+                <img src="img/maker-launch.svg" class="image" alt="" />
+            </div>
+            <div class="panel right-panel">
+                <div class="content">
+                    <h3>¿Uno de nosotros?</h3>
+                    <p>
+                        Solo inicia sesión y listo, irás a tu panel de control.
+                    </p>
+                    <button class="btn transparent" id="sign-in-btn">
+                        Iniciar sesión
+                    </button>
+                </div>
+                <img src="img/press-play.svg" class="image" alt="" />
+            </div>
+        </div>
+    </div>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <script src="./js/auth.js"></script>
-
 </body>
 
 </html>
