--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -51,12 +51,12 @@
                 </a>
             </li>
             <li class="enlace">
-                <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html">
                     Ver artículos
                 </a>
             </li>
             <li class="crearBlog enlace">
-                <a href="https://blogi-node.herokuapp.com/auth.html">
+                <a href="https://blogi-node.herokuapp.com/plan.html">
                     <button>
                         Crear mi blog
                     </button>
@@ -303,7 +303,7 @@
             <div class="elPapi col-sm">
                 <h4>Desarrollador</h4>
                 <p>Derek Pérez - Copyright 2021.</p>
-                <p>v 1.2.0</p>
+                <p>v 1.3.0</p>
             </div>
         </div>
     </footer>
