--- a/public/info.html
+++ b/public/info.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/info.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <title>Info. sobre sitio</title>
+    <title>Info. sobre Blogi</title>
     <link rel="manifest" href="./manifest.json">
     <!-- Android -->
     <meta name="theme-color" content="orange">
@@ -42,12 +42,12 @@
                 </a>
             </li>
             <li class="enlace">
-                <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html">
                     Ver artículos
                 </a>
             </li>
             <li class="enlace">
-                <a href="https://blogi-node.herokuapp.com/auth.html">
+                <a href="https://blogi-node.herokuapp.com/plan.html">
                     <button>
                         Crear mi blog
                     </button>
@@ -74,12 +74,14 @@
         <strong>Estas son algunas de las características de este sitio:</strong>
         <ul class="caracteristicas">
             <li>Diseño Responsive o Multiplataforma</li>
-            <li>API RESTFUL</li>
+            <li>Modo oscuro en la mayoría de páginas</li>
             <li>Botones para contacto a redes sociales</li>
             <li>Foro</li>
+            <li>API RESTFUL</li>
             <li>PWA (<b>P</b>rogressive <b>W</b>eb <b>A</b>pplication)</li>
             <li>Notificaciones Push</li>
-            <li>Modo oscuro</li>
+            <li>Autentcación con Google</li>
+            <li>Manejo del Local Storage</li>
             <li>Y más...</li>
         </ul>
 
@@ -117,7 +119,7 @@
             <div class="elPapi col-sm">
                 <h4>Desarrollador</h4>
                 <p>Derek Pérez - Copyright 2021.</p>
-                <p>v 1.2.0</p>
+                <p>v 1.3.0</p>
             </div>
         </div>
     </footer>
